# rscalendar

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODO.md
.github/: copilot-instructions.md
docs/: book.toml
docs/book/: 404.html  authentication.html  commands.html  getting-started.html  index.html  installation.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-eb72961d.js  toc-f3b4fafb.js  toc.html
docs/book/commands/: auth.html  complete.html  create.html  delete.html  list.html  update.html
docs/src/: SUMMARY.md  authentication.md  commands.md  configuration.md  design-decisions.md  getting-started.md  installation.md  introduction.md
docs/src/commands/: auth.md  calendar-create.md  check.md  complete.md  copy-all-events.md  create.md  defconfig.md  delete.md  event-create.md  event-delete.md  event-update.md  list-calendars.md  list.md  migrate.md  move-events.md  properties-add.md  properties-check.md  properties-delete.md  properties-edit.md  properties-rename.md  update.md
scripts/: migrate.sh
src/: auth.rs  cli.rs  client.rs  config.rs  helpers.rs  main.rs  models.rs
src/commands/: calendar.rs  check.rs  event.rs  list.rs  mod.rs  move_events.rs  properties.rs
