[package]
name = "rscalendar"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
open = "5"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
yup-oauth2 = "11"
