[package]
name = "rscalendar"
version = "0.1.2"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]
description = "Manage your Google Calendar"
license = "MIT"
repository = "https://github.com/veltzer/rscalendar"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
open = "5"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
urlencoding = "2.1.3"
yup-oauth2 = "11"

[profile.release]
strip = true
lto = true
codegen-units = 1
